--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-DATABASE_HOST=blog-devkoore.ani5pte.mongodb.net
-DATABASE_NAME=blog-devkoore
-DATABASE_USERNAME=devkoore
-DATABASE_PASSWORD=Devkoore_568923
+DATABASE_HOST=
+DATABASE_NAME=
+DATABASE_USERNAME=
+DATABASE_PASSWORD=
